--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,12 @@
 <%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
-  <%= f.text_field :title %><br>
 
+  <%= author_id_field(@post) %>
+  <br>
+  <%= f.hidden_field :author_id %>
+
+  <%= f.text_field :title %><br>
   <label>Post Description</label><br>
   <%= f.text_area :description %><br>
-
   <%= f.submit %>
 <% end %>
